--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
         </div>
       </div>
       <!-- 下拉 -->
-      <div class="dropdown">
+      <div class="dropdown dropdown-dark">
         <div class="dropdown-line dropdown-line-white"></div>
         <div class="dropdown-line-show dropdown-line-white-show"></div>
         <div class="dropdown-menu dropdown-menu-white">
@@ -94,7 +94,7 @@
       </div>
     </div>
 
-    <div class="about-content">
+    <div class="about-content" style="height: 500px;">
       <div class="about-signle-content">aksjfaklsdjfalsdjfalksjdf</div>
       <div class="about-signle-content">aksjfaklsdjfalsdjfalksjdf</div>
     </div>
