--- a/about.html
+++ b/about.html
@@ -1,118 +1,117 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Hu Zanlai Website</title>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1,
-			user-scalable=no"
-    />
-    <link rel="stylesheet" href="assets/css/main.css" />
-  </head>
 
-  <body class="body-style">
-    <div class="news news-golden">
-      <div class="news-text">更新时间：</div>
-    </div>
+<head>
+  <title>Hu Zanlai Website</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1,
+			user-scalable=no" />
+  <link rel="stylesheet" href="assets/css/main.css" />
+</head>
 
-    <!-- navigation -->
-    <div class="navigation navigation-grey">
-      <!-- 横版 -->
-      <div class="navigation-content">
-        <div class="logo">Hu</div>
-        <div class="navigation-choice">
-          <a href="index.html">
-            <div class="choice choice-home">主页</div>
-          </a>
-          <a href="study-notes.html">
-            <div class="choice choice-home">学习笔记</div>
-          </a>
-          <a href="skills.html">
-            <div class="choice choice-home">专业技能</div>
-          </a>
-          <a href="projects.html">
-            <div class="choice choice-home">项目经历</div>
-          </a>
-          <a href="about.html">
-            <div class="choice choice-home choice-focused choice-focused-home">
-              关于本站
-            </div>
-          </a>
-          <a href="https://github.com/zanlaihu">
-            <div class="github github-white"></div>
-          </a>
-        </div>
-        <div class="inner-header-icon">
-          <span> </span>
-          <span> </span>
-        </div>
+<body class="body-style">
+  <div class="news news-golden">
+    <div class="news-text">更新时间：</div>
+  </div>
+
+  <!-- navigation -->
+  <div class="navigation navigation-grey">
+    <!-- 横版 -->
+    <div class="navigation-content">
+      <div class="logo">Hu</div>
+      <div class="navigation-choice">
+        <a href="index.html">
+          <div class="choice choice-home">主页</div>
+        </a>
+        <a href="study-notes.html">
+          <div class="choice choice-home">学习笔记</div>
+        </a>
+        <a href="skills.html">
+          <div class="choice choice-home">专业技能</div>
+        </a>
+        <a href="projects.html">
+          <div class="choice choice-home">项目经历</div>
+        </a>
+        <a href="about.html">
+          <div class="choice choice-home choice-focused choice-focused-home">
+            关于本站
+          </div>
+        </a>
+        <a href="https://github.com/zanlaihu">
+          <div class="github github-white"></div>
+        </a>
       </div>
-      <!-- 下拉 -->
-      <div class="dropdown dropdown-dark">
-        <div class="dropdown-line dropdown-line-white"></div>
-        <div class="dropdown-line-show dropdown-line-white-show"></div>
-        <div class="dropdown-menu dropdown-menu-white">
-          <a href="index.html">
-            <p>主页</p>
-          </a>
-          <hr />
-          <a href="study-notes.html">
-            <p>学习笔记</p>
-          </a>
-          <hr />
-          <a href="skills.html">
-            <p>专业技能</p>
-          </a>
-          <hr />
-          <a href="projects.html">
-            <p>项目经历</p>
-          </a>
-          <hr />
-          <a href="about.html">
-            <p>关于本站</p>
-          </a>
-          <hr />
-          <a href="https://github.com/zanlaihu">
-            <p>GitHub</p>
-          </a>
-          <hr />
-        </div>
+      <div class="inner-header-icon">
+        <span> </span>
+        <span> </span>
       </div>
     </div>
-
-    <!-- home-ins -->
-    <div class="home-ins home-ins-other" style="height: 390px;">
-      <div class="ins-content" style="text-align: center;">
-        <div class="bottom-pic">
-          <img src="./assets/img/cat-cake.png" width="130px"/>
-        </div>
-        <div style="font-size: 38px; margin-bottom: 20px; line-height: 42px">
-          得益于GitHub Pages
-        </div>
-        <div style="padding-bottom: 100px">以免费的形式就让网页上线了。</div>
+    <!-- 下拉 -->
+    <div class="dropdown dropdown-dark">
+      <div class="dropdown-line dropdown-line-white"></div>
+      <div class="dropdown-line-show dropdown-line-white-show"></div>
+      <div class="dropdown-menu dropdown-menu-white">
+        <a href="index.html">
+          <p>主页</p>
+        </a>
+        <hr />
+        <a href="study-notes.html">
+          <p>学习笔记</p>
+        </a>
+        <hr />
+        <a href="skills.html">
+          <p>专业技能</p>
+        </a>
+        <hr />
+        <a href="projects.html">
+          <p>项目经历</p>
+        </a>
+        <hr />
+        <a href="about.html">
+          <p>关于本站</p>
+        </a>
+        <hr />
+        <a href="https://github.com/zanlaihu">
+          <p>GitHub</p>
+        </a>
+        <hr />
       </div>
     </div>
+  </div>
 
-    <div class="about-content" style="height: 500px;">
-      <div class="about-signle-content">aksjfaklsdjfalsdjfalksjdf</div>
-      <div class="about-signle-content">aksjfaklsdjfalsdjfalksjdf</div>
-    </div>
-
-    </div>
-
-    <!-- bottom -->
-    <div class="bottom">
-      <div class="bottom-contact">
-        <div class="contact-title">联系方式</div>
-        <div class="contact-message">邮箱：klaushu@outlook.com</div>
+  <!-- home-ins -->
+  <div class="home-ins home-ins-other" style="height: 390px;">
+    <div class="ins-content" style="text-align: center;">
+      <div class="bottom-pic">
+        <img src="./assets/img/cat-cake.png" width="130px" />
       </div>
-      <div class="bottom-line"></div>
-      <div class="bottom-label">Made with ❤️ by Zanlai.</div>
+      <div style="font-size: 38px; margin-bottom: 20px; line-height: 42px">
+        得益于GitHub Pages
+      </div>
+      <div style="padding-bottom: 100px">以免费的形式就让网页上线了。</div>
     </div>
+  </div>
 
-    <!-- JavaScript -->
-    <script src="assets/js/jquery-3.6.0.min.js"></script>
-    <script src="assets/js/main.js"></script>
-  </body>
+  <div class="about-content" style="height: 500px;">
+    <div class="about-signle-content">aksjfaklsdjfalsdjfalksjdf</div>
+    <div class="about-signle-content">aksjfaklsdjfalsdjfalksjdf</div>
+  </div>
+
+  </div>
+
+  <!-- bottom -->
+  <div class="bottom">
+    <div class="bottom-contact">
+      <div class="contact-title">联系方式</div>
+      <div class="contact-message">邮箱：klaushu@outlook.com</div>
+    </div>
+    <div class="bottom-line"></div>
+    <div class="bottom-label">Made with ❤️ by Zanlai.</div>
+  </div>
+
+  <!-- JavaScript -->
+  <script src="assets/js/jquery-3.6.0.min.js"></script>
+  <script src="assets/js/main.js"></script>
+</body>
+
 </html>
