--- a/projects.html
+++ b/projects.html
@@ -1,105 +1,104 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Hu Zanlai Website</title>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1,
-			user-scalable=no"
-    />
-    <link rel="stylesheet" href="assets/css/main.css" />
-  </head>
 
-  <body class="body-style">
-    <div class="news news-golden">
-      <div class="news-text">更新时间：</div>
-    </div>
+<head>
+  <title>Hu Zanlai Website</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1,
+			user-scalable=no" />
+  <link rel="stylesheet" href="assets/css/main.css" />
+</head>
 
-    <!-- navigation -->
-    <div class="navigation">
-      <!-- 横版 -->
-      <div class="navigation-content">
-        <div class="logo ">Hu</div>
-        <div class="navigation-choice">
-          <a href="index.html">
-            <div class="choice choice-home ">
-              主页
-            </div>
-          </a>
-          <a href="study-notes.html">
-            <div class="choice choice-home">学习笔记</div>
-          </a>
-          <a href="skills.html">
-            <div class="choice choice-home">专业技能</div>
-          </a>
-          <a href="projects.html">
-            <div class="choice choice-home choice-focused choice-focused-home">项目经历</div>
-          </a>
-          <a href="about.html">
-            <div class="choice choice-home">关于本站</div>
-          </a>
-          <a href="https://github.com/zanlaihu">
-            <div class="github github-white"></div>
-          </a>
-        </div>
-        <div class="inner-header-icon">
-          <span> </span>
-          <span> </span>
-        </div>
+<body class="body-style">
+  <div class="news news-golden">
+    <div class="news-text">更新时间：</div>
+  </div>
+
+  <!-- navigation -->
+  <div class="navigation">
+    <!-- 横版 -->
+    <div class="navigation-content">
+      <div class="logo ">Hu</div>
+      <div class="navigation-choice">
+        <a href="index.html">
+          <div class="choice choice-home ">
+            主页
+          </div>
+        </a>
+        <a href="study-notes.html">
+          <div class="choice choice-home">学习笔记</div>
+        </a>
+        <a href="skills.html">
+          <div class="choice choice-home">专业技能</div>
+        </a>
+        <a href="projects.html">
+          <div class="choice choice-home choice-focused choice-focused-home">项目经历</div>
+        </a>
+        <a href="about.html">
+          <div class="choice choice-home">关于本站</div>
+        </a>
+        <a href="https://github.com/zanlaihu">
+          <div class="github github-white"></div>
+        </a>
       </div>
-      <!-- 下拉 -->
-      <div class="dropdown">
-        <div class="dropdown-line dropdown-line-white"></div>
-        <div class="dropdown-menu dropdown-menu-white">
-          <a href="index.html">
-            <p>主页</p>
-          </a>
-          <hr />
-          <a href="study-notes.html">
-            <p>学习笔记</p>
-          </a>
-          <hr />
-          <a href="skills.html">
-            <p>专业技能</p>
-          </a>
-          <hr />
-          <a href="projects.html">
-            <p>项目经历</p>
-          </a>
-          <hr />
-          <a href="about.html">
-            <p>关于本站</p>
-          </a>
-          <hr />
-          <a href="https://github.com/zanlaihu">
-            <p>GitHub</p>
-          </a>
-          <hr />
-        </div>
+      <div class="inner-header-icon">
+        <span> </span>
+        <span> </span>
       </div>
     </div>
-
-    <!-- home-ins -->
-    <div class="home-ins home-ins-other">
-      <div class="ins-content">
-        <div style="width: 100%;font-size: 50px;text-align: center;margin-top: 150px;">敬请期待</div>
+    <!-- 下拉 -->
+    <div class="dropdown">
+      <div class="dropdown-line dropdown-line-white"></div>
+      <div class="dropdown-menu dropdown-menu-white">
+        <a href="index.html">
+          <p>主页</p>
+        </a>
+        <hr />
+        <a href="study-notes.html">
+          <p>学习笔记</p>
+        </a>
+        <hr />
+        <a href="skills.html">
+          <p>专业技能</p>
+        </a>
+        <hr />
+        <a href="projects.html">
+          <p>项目经历</p>
+        </a>
+        <hr />
+        <a href="about.html">
+          <p>关于本站</p>
+        </a>
+        <hr />
+        <a href="https://github.com/zanlaihu">
+          <p>GitHub</p>
+        </a>
+        <hr />
       </div>
-      <div style="height: 400px;"></div>
     </div>
+  </div>
 
-    <!-- bottom -->
-    <div class="bottom">
-      <div class="bottom-contact">
-        <div class="contact-title">联系方式</div>
-        <div class="contact-message">邮箱：klaushu@outlook.com</div>
-      </div>
-      <div class="bottom-line"></div>
-      <div class="bottom-label">Made with ❤️ by Zanlai.</div>
+  <!-- home-ins -->
+  <div class="home-ins home-ins-other">
+    <div class="ins-content">
+      <div style="width: 100%;font-size: 50px;text-align: center;margin-top: 150px;">敬请期待</div>
     </div>
+    <div style="height: 400px;"></div>
+  </div>
 
-    <!-- JavaScript -->
-    <script src="assets/js/jquery-3.6.0.min.js"></script>
-    <script src="assets/js/main.js"></script>
-  </body>
+  <!-- bottom -->
+  <div class="bottom">
+    <div class="bottom-contact">
+      <div class="contact-title">联系方式</div>
+      <div class="contact-message">邮箱：klaushu@outlook.com</div>
+    </div>
+    <div class="bottom-line"></div>
+    <div class="bottom-label">Made with ❤️ by Zanlai.</div>
+  </div>
+
+  <!-- JavaScript -->
+  <script src="assets/js/jquery-3.6.0.min.js"></script>
+  <script src="assets/js/main.js"></script>
+</body>
+
 </html>
