--- a/study-notes.html
+++ b/study-notes.html
@@ -178,6 +178,14 @@
       </div>
       <div class="single-content">
         <a>
+          <div>AJAX</div>
+        </a>
+        <a href="https://github.com/zanlaihu/study-notes/blob/main/AJAX/1%20什么是Ajax.md" target="_blank">
+          <div>1 什么是AJAX</div>
+        </a>
+      </div>
+      <div class="single-content">
+        <a>
           <div>SVG</div>
         </a>
         <a>
@@ -185,35 +193,25 @@
         </a>
       </div>
     </div>
-    <!-- <div class="full-index-content">
-        <div class="single-content-title">图形</div>
-        <div class="single-content">
-          <a><div>SVG</div></a>
-          <a><div>1 线性渐变</div></a>
-        </div>
-      </div> -->
     <div class="full-index-content">
       <div class="single-content-title">框架</div>
-      <!-- <div class="single-content">
-          <a><div>Angular</div></a>
-        </div> -->
       <div class="single-content">
         <a>
           <div>React</div>
         </a>
-        <a>
+        <a href="https://github.com/zanlaihu/study-notes/blob/main/React/1%20什么是React.md" target="_blank">
           <div>1 什么是React</div>
         </a>
-        <a>
+        <a href="https://github.com/zanlaihu/study-notes/blob/main/React/2%20JSX.md" target="_blank">
           <div>2 JSX</div>
         </a>
-        <a>
+        <a href="https://github.com/zanlaihu/study-notes/blob/main/React/3%20元素更新.md" target="_blank">
           <div>3 元素更新</div>
         </a>
-        <a>
+        <a href="https://github.com/zanlaihu/study-notes/blob/main/React/4%20组件%20props.md" target="_blank">
           <div>4 组件 props</div>
         </a>
-        <a>
+        <a href="https://github.com/zanlaihu/study-notes/blob/main/React/5%20state%20声明周期.md" target="_blank">
           <div>5 生命周期 states</div>
         </a>
       </div>
@@ -221,25 +219,25 @@
         <a>
           <div>jQuery</div>
         </a>
-        <a>
+        <a href="https://github.com/zanlaihu/study-notes/blob/main/JQuery/1.2%20语法.md" target="_blank">
           <div>1 什么是jQuery</div>
         </a>
-        <a>
+        <a href="https://github.com/zanlaihu/study-notes/blob/main/JQuery/1.2%20语法.md" target="_blank">
           <div>1.2 语法</div>
         </a>
-        <a>
+        <a href="https://github.com/zanlaihu/study-notes/blob/main/JQuery/1.3%20选择器.md" target="_blank">
           <div>1.3 选择器</div>
         </a>
-        <a>
+        <a href="https://github.com/zanlaihu/study-notes/blob/main/JQuery/1.4%20事件.md" target="_blank">
           <div>1.4 事件</div>
         </a>
-        <a>
+        <a href="https://github.com/zanlaihu/study-notes/blob/main/JQuery/2.1%20隐藏和显示.md" target="_blank">
           <div>2.1 隐藏和显示</div>
         </a>
-        <a>
+        <a href="https://github.com/zanlaihu/study-notes/blob/main/JQuery/2.2%20淡入淡出.md" target="_blank">
           <div>2.2 淡入淡出</div>
         </a>
-        <a>
+        <a href="https://github.com/zanlaihu/study-notes/blob/main/JQuery/2.3%20滑动.md" target="_blank">
           <div>2.3 滑动</div>
         </a>
         <a>
@@ -274,10 +272,10 @@
         <a>
           <div>计算机网络</div>
         </a>
-        <a>
+        <a href="https://github.com/zanlaihu/study-notes/blob/main/计算机网络/跨域.md" target="_blank">
           <div>1. 跨域</div>
         </a>
-        <a>
+        <a href="https://github.com/zanlaihu/study-notes/blob/main/计算机网络/跨域资源共享CORS.md" target="_blank">
           <div>2. 跨域资源共享CORS</div>
         </a>
       </div>
@@ -285,8 +283,8 @@
         <a>
           <div>应用维护</div>
         </a>
-        <a>
-          <div>1. 版本管理</div>
+        <a href="https://github.com/zanlaihu/study-notes/blob/main/React/XX%20发布渠道.md" target="_blank">
+          <div>1. 版本管理(React为例)</div>
         </a>
       </div>
     </div>
