--- a/study-notes.html
+++ b/study-notes.html
@@ -125,10 +125,19 @@
             <div>11 数据类型：对象的属性</div>
           </a>
           <a href="https://juejin.cn/post/6953505088673415176" target="_blank">
-            <div>12 操作符</div>
+            <div>12 操作符：一元、加性、乘性</div>
+          </a>
+          <a href="https://juejin.cn/post/6976235815944880141" target="_blank">
+            <div>13 操作符：布尔、相等、关系</div>
+          </a>
+          <a href="https://juejin.cn/post/6976241341084729351" target="_blank">
+            <div>14 操作符： 条件、逗号、赋值</div>
+          </a>
+          <a href="https://juejin.cn/post/6976240808080965663" target="_blank">
+            <div>15 位操作符</div>
           </a>
           <a href="https://juejin.cn/post/6955446562768027685" target="_blank">
-            <div>13 语句</div>
+            <div>16 语句</div>
           </a>
         </div>
         <div class="single-content">
@@ -136,7 +145,7 @@
             <div>JavaScript中级</div>
           </a>
           <a>
-            <div>1 XMLHttpRequest</div>
+            <div>1 XMLHttpRequest对象</div>
           </a>
         </div>
         <div class="single-content">
@@ -151,6 +160,12 @@
           </a>
           <a>
             <div>3 添加样式</div>
+          </a>
+          <a>
+            <div>布局</div>
+          </a>
+          <a>
+            <div>盒子模型</div>
           </a>
           <a>
             <div>CSS问题汇总</div>
