--- a/index.html
+++ b/index.html
@@ -18,13 +18,16 @@
   <div class="navigation">
     <!-- 横版 -->
     <div class="navigation-content">
-      <div class="logo">Hu</div>
       <div class="navigation-choice">
         <a href="index.html">
-          <div class="choice choice-home choice-focused choice-focused-home">
+          <div class="logo logo-white choice-focused-white">Hu</div>
+        </a>
+        
+        <!-- <a href="index.html">
+          <div class="choice choice-home choice-focused choice-focused-white">
             主页
           </div>
-        </a>
+        </a> -->
         <a href="study-notes.html">
           <div class="choice choice-home">学习笔记</div>
         </a>
