--- a/projects.html
+++ b/projects.html
@@ -18,12 +18,11 @@
   <div class="navigation">
     <!-- 横版 -->
     <div class="navigation-content">
-      <div class="logo ">Hu</div>
+      
       <div class="navigation-choice">
+        
         <a href="index.html">
-          <div class="choice choice-home ">
-            主页
-          </div>
+          <div class="logo logo-white">Hu</div>
         </a>
         <a href="study-notes.html">
           <div class="choice choice-home">学习笔记</div>
@@ -32,7 +31,7 @@
           <div class="choice choice-home">专业技能</div>
         </a>
         <a href="projects.html">
-          <div class="choice choice-home choice-focused choice-focused-home">项目经历</div>
+          <div class="choice choice-home choice-focused choice-focused-white">项目经历</div>
         </a>
         <a href="about.html">
           <div class="choice choice-home">关于本站</div>
