--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <!-- 横版 -->
     <div class="navigation-content">
       <div class="navigation-choice">
-        <a href="index.html">
-          <div class="logo logo-white choice-focused-white">Hu</div>
+        <a href="index.html" class="logo logo-white choice-focused-white">
+          <div >Hu</div>
         </a>
         
         <!-- <a href="index.html">
