--- a/study-notes.html
+++ b/study-notes.html
@@ -20,8 +20,8 @@
     <div class="navigation-content navigation-content-unhome">
 
       <div class="navigation-choice navigation-choice-unhome navigation-black">
-        <a href="index.html">
-          <div class="logo logo-black">Hu</div>
+        <a href="index.html" class="logo logo-black">
+          <div >Hu</div>
         </a>
         <a href="study-notes.html">
           <div class="choice choice-study choice-focused choice-focused-black">
