--- a/projects.html
+++ b/projects.html
@@ -21,8 +21,8 @@
       
       <div class="navigation-choice">
         
-        <a href="index.html">
-          <div class="logo logo-white">Hu</div>
+        <a href="index.html" class="logo logo-white">
+          <div >Hu</div>
         </a>
         <a href="study-notes.html">
           <div class="choice choice-home">学习笔记</div>
