--- a/study-notes.html
+++ b/study-notes.html
@@ -85,7 +85,7 @@
       <div class="single-content-title">基础</div>
       <div class="single-content">
         <a href="" target="_blank">
-          <div>JavaScript</div>
+          <div>JavaScript初级</div>
         </a>
         <a href="https://juejin.cn/post/6934362238815830030" target="_blank">
           <div>1 什么是JavaScript</div>
@@ -136,14 +136,14 @@
           <div>16 语句</div>
         </a>
       </div>
-      <!-- <div class="single-content">
+      <div class="single-content">
           <a>
             <div>JavaScript中级</div>
           </a>
           <a>
             <div>1 XMLHttpRequest对象</div>
           </a>
-        </div> -->
+        </div>
       <div class="single-content">
         <a>
           <div>CSS</div>
@@ -283,14 +283,6 @@
         </a>
         <a href="https://github.com/zanlaihu/study-notes/blob/main/计算机网络/跨域资源共享CORS.md" target="_blank">
           <div>2. 跨域资源共享CORS</div>
-        </a>
-      </div>
-      <div class="single-content">
-        <a>
-          <div>网络请求与远程资源</div>
-        </a>
-        <a href="" target="_blank">
-          <div>1 XMLHttpRequest对象</div>
         </a>
       </div>
       <div class="single-content">
