--- a/study-notes.html
+++ b/study-notes.html
@@ -181,6 +181,29 @@
         </div>
       </div>
       <div class="full-index-content">
+        <div class="single-content-title">技术</div>
+        <div class="single-content">
+          <a><div>Redux</div></a>
+          <a
+            href="https://github.com/zanlaihu/study-notes/blob/main/Redux/1%20%E4%BB%80%E4%B9%88%E6%98%AFRedux.md"
+            target="_blank"
+            ><div>1 什么是Redux</div></a
+          >
+        </div>
+        <div class="single-content">
+          <a>
+            <div>AJAX</div>
+          </a>
+          <a
+            href="https://github.com/zanlaihu/study-notes/blob/main/AJAX/1%20什么是Ajax.md"
+            target="_blank"
+          >
+            <div>1 什么是AJAX</div>
+          </a>
+        </div>
+      </div>
+
+      <div class="full-index-content">
         <div class="single-content-title">库</div>
         <div class="single-content">
           <a>
@@ -314,17 +337,6 @@
             target="_blank"
           >
             <div>2. 跨域资源共享CORS</div>
-          </a>
-        </div>
-        <div class="single-content">
-          <a>
-            <div>AJAX</div>
-          </a>
-          <a
-            href="https://github.com/zanlaihu/study-notes/blob/main/AJAX/1%20什么是Ajax.md"
-            target="_blank"
-          >
-            <div>1 什么是AJAX</div>
           </a>
         </div>
       </div>
