--- a/study-notes.html
+++ b/study-notes.html
@@ -212,20 +212,8 @@
           <a>
             <div>React</div>
           </a>
-          <a href="https://github.com/zanlaihu/study-notes/blob/main/React/1%20什么是React.md" target="_blank">
+          <a href="https://juejin.cn/post/6961048690903973896/" target="_blank">
             <div>1 什么是React</div>
-          </a>
-          <a href="https://github.com/zanlaihu/study-notes/blob/main/React/2%20JSX.md" target="_blank">
-            <div>2 JSX</div>
-          </a>
-          <a href="https://github.com/zanlaihu/study-notes/blob/main/React/3%20元素更新.md" target="_blank">
-            <div>3 元素更新</div>
-          </a>
-          <a href="https://github.com/zanlaihu/study-notes/blob/main/React/4%20组件%20props.md" target="_blank">
-            <div>4 组件 props</div>
-          </a>
-          <a href="https://github.com/zanlaihu/study-notes/blob/main/React/5%20state%20声明周期.md" target="_blank">
-            <div>5 生命周期 states</div>
           </a>
         </div>
       </div>
