--- a/study-notes.html
+++ b/study-notes.html
@@ -93,7 +93,7 @@
           <div>1 什么是JavaScript</div>
         </a>
         <a href="https://juejin.cn/post/6940502924346785800" target="_blank">
-          <div>2 script标签</div>
+          <div>2 &lt;script></div>
         </a>
         <a href="https://juejin.cn/post/6940867148935856165" target="_blank">
           <div>3 语法</div>
@@ -102,7 +102,7 @@
           <div>4 变量声明</div>
         </a>
         <a href="https://juejin.cn/post/6943151642397114405" target="_blank">
-          <div>5 数据类型：Undefined,Null,Boolean</div>
+          <div>5 数据类型：Undefined、Null、Boolean</div>
         </a>
         <a href="https://juejin.cn/post/6943536295561920542" target="_blank">
           <div>6 数据类型：Number</div>
@@ -302,7 +302,7 @@
             <div>网络协议</div>
           </a>
           <a href="https://github.com/zanlaihu/study-notes/blob/main/计算机网络/跨域.md" target="_blank">
-            <div>1. 跨域和同源策略</div>
+            <div>跨域和同源策略</div>
           </a>
           <!-- <a href="https://github.com/zanlaihu/study-notes/blob/main/计算机网络/跨域资源共享CORS.md" target="_blank">
             <div>2. 跨域资源共享CORS</div>
@@ -328,7 +328,7 @@
             <div>应用维护</div>
           </a>
           <a href="https://github.com/zanlaihu/study-notes/blob/main/React/XX%20发布渠道.md" target="_blank">
-            <div>1. 版本管理(React为例)</div>
+            <div>版本管理(React为例)</div>
           </a>
         </div>
       </div>
