--- a/study-notes.html
+++ b/study-notes.html
@@ -215,6 +215,9 @@
           <a href="https://juejin.cn/post/6961048690903973896/" target="_blank">
             <div>1 什么是React</div>
           </a>
+          <a href="https://juejin.cn/post/6977370372333109256" target="_blank">
+            <div>2 组件&props</div>
+          </a>
         </div>
       </div>
       <div class="full-index-content">
