--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
             关于本站
           </div>
         </a>
-        <a href="https://github.com/zanlaihu">
+        <a href="https://github.com/zanlaihu" target="_blank">
           <div class="github github-white"></div>
         </a>
       </div>
