--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <a href="about.html">
           <div class="choice choice-home">关于本站</div>
         </a>
-        <a href="https://github.com/zanlaihu">
+        <a href="https://github.com/zanlaihu" target="_blank">
           <div class="github github-white"></div>
         </a>
       </div>
