--- a/study-notes.html
+++ b/study-notes.html
@@ -39,7 +39,7 @@
         <a href="about.html">
           <div class="choice choice-study">关于本站</div>
         </a>
-        <a href="https://github.com/zanlaihu">
+        <a href="https://github.com/zanlaihu" target="_blank">
           <div class="github github-black"></div>
         </a>
       </div>
@@ -145,7 +145,7 @@
         <a>
           <div>JavaScript中级</div>
         </a>
-        <a href="https://github.com/zanlaihu/study-notes/blob/main/《JavaScript高级程序设计》和MDN/XX%20XMLHttpRequest对象.md" target="_blank">
+        <a href="https://github.com/zanlaihu/study-notes/blob/main/《JavaScript高级程序设计》和MDN/99.XX%20XMLHttpRequest对象.md" target="_blank">
           <div>XMLHttpRequest对象</div>
         </a>
       </div>
