--- a/study-notes.html
+++ b/study-notes.html
@@ -145,7 +145,8 @@
         <a>
           <div>JavaScript中级</div>
         </a>
-        <a href="https://github.com/zanlaihu/study-notes/blob/main/《JavaScript高级程序设计》和MDN/99.XX%20XMLHttpRequest对象.md" target="_blank">
+        <a href="https://github.com/zanlaihu/study-notes/blob/main/《JavaScript高级程序设计》和MDN/99.XX%20XMLHttpRequest对象.md"
+          target="_blank">
           <div>XMLHttpRequest对象</div>
         </a>
       </div>
@@ -176,13 +177,13 @@
         <a>
           <div>CSS3</div>
         </a>
-        <a href="" target="_blank">
+        <a target="_blank">
           <div>弹性盒子</div>
         </a>
-        <a href="" target="_blank">
+        <a target="_blank">
           <div>多媒体查询</div>
         </a>
-        <a href="" target="_blank">
+        <a target="_blank">
           <div>自定义字体</div>
         </a>
         <a>
