--- a/study-notes.html
+++ b/study-notes.html
@@ -216,6 +216,9 @@
           <a href="https://juejin.cn/post/6977370372333109256" target="_blank">
             <div>2 组件&props</div>
           </a>
+          <a href="https://juejin.cn/post/6978073442587246600" target="_blank">
+            <div>3 生命周期&state</div>
+          </a>
         </div>
       </div>
       <div class="full-index-content">
