--- a/study-notes.html
+++ b/study-notes.html
@@ -306,7 +306,7 @@
             <div>网络请求与远程资源</div>
           </a>
           <a href="https://github.com/zanlaihu/study-notes/blob/main/计算机网络/跨域.md" target="_blank">
-            <div>跨域&同源策略</div>
+            <div>跨域</div>
           </a>
           <!-- <a href="https://github.com/zanlaihu/study-notes/blob/main/计算机网络/跨域资源共享CORS.md" target="_blank">
             <div>2. 跨域资源共享CORS</div>
