--- a/index.html
+++ b/index.html
@@ -20,14 +20,8 @@
     <div class="navigation-content">
       <div class="navigation-choice">
         <a href="index.html" class="logo logo-white choice-focused-white">
-          <div >Hu</div>
+          <div>Hu</div>
         </a>
-        
-        <!-- <a href="index.html">
-          <div class="choice choice-home choice-focused choice-focused-white">
-            主页
-          </div>
-        </a> -->
         <a href="study-notes.html">
           <div class="choice choice-home">学习笔记</div>
         </a>
@@ -84,20 +78,12 @@
   <!-- home-ins -->
   <div class="home-ins home-ins-home">
     <div class="ins-content">
-      <div class="ins-left">
-        <div class="ins-news">
-          <div class="ins-news-logo">New</div>
-          <div class="ins-news-title">小破站的艰辛建站史</div>
-          <div class="ins-arrow"></div>
-        </div>
-
-        <div class="ins-title">因为兴趣使然而建立的小站</div>
-        <div class="ins-ins">
-          用于放置学习笔记、项目经验总结、技能清单、以及最右边小小的GitHub链接。快点击顶部的导航来选择感兴趣的内容吧！
-        </div>
-        <div style="height: 400px;"></div>
+      <div class="ins-title">因为兴趣使然而建立的小站</div>
+      <div class="ins-ins">
+        用于放置学习笔记、专业技能、项目经历、及GitHub。快点击顶部的导航来选择感兴趣的内容吧！
       </div>
     </div>
+    <div class=""></div>
   </div>
 
   <!-- bottom -->
