--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
   </head>
 
   <body class="body-style">
-    <div class="news news-purple">
+    <div class="news news-blue">
       <div class="news-text">更新时间：</div>
     </div>
 
     <!-- navigation -->
-    <div class="navigation navigation-dark">
+    <div class="navigation navigation-grey">
       <!-- 横版 -->
       <div class="navigation-content">
         <div class="navigation-choice">
-          <a href="index.html" class="logo logo-white choice-focused-white">
+          <a href="index.html" class="logo logo-white">
             <div>Hu</div>
           </a>
           <a href="study-notes.html">
@@ -46,7 +46,7 @@
         </div>
       </div>
       <!-- 下拉 -->
-      <div class="dropdown">
+      <div class="dropdown dropdown-dark">
         <div class="dropdown-line dropdown-line-white"></div>
         <div class="dropdown-menu dropdown-menu-white">
           <a href="index.html">
@@ -78,12 +78,15 @@
     </div>
 
     <!-- home-ins -->
-    <div class="home-ins home-ins-home">
+    <div class="home-ins">
       <div class="ins-content">
         <div class="ins-title">因为兴趣使然而建立的小站</div>
         <div class="ins-ins">
           用于放置学习笔记、专业技能、项目经历、及GitHub。快点击顶部的导航来选择感兴趣的内容吧！
         </div>
+        <a href="./study-notes.html" target=""
+          ><div class="ins-link">正在添加学习笔记中 ></div></a
+        >
       </div>
     </div>
 
