--- a/study-notes.html
+++ b/study-notes.html
@@ -169,6 +169,9 @@
         <a>
           <div>盒子模型</div>
         </a>
+        <a>
+          <div>linear-gradient</div>
+        </a>
       </div>
       <div class="single-content">
         <a>
