--- a/index.html
+++ b/index.html
@@ -91,10 +91,18 @@
     </div>
 
     <div class="bar">
-      <div class="first-single-bar single-bar"></div>
-      <div class="second-single-bar single-bar"></div>
-      <div class="third-single-bar single-bar"></div>
-      <div class="fourth-single-bar single-bar"></div>
+      <div class="first-single-bar single-bar">
+        <div class="single-bar-back">学习笔记</div>
+      </div>
+      <div class="second-single-bar single-bar">
+        <div class="single-bar-back">专业技能</div>
+      </div>
+      <div class="third-single-bar single-bar">
+        <div class="single-bar-back">项目经历</div>
+      </div>
+      <div class="fourth-single-bar single-bar">
+        <div class="single-bar-back single-bar-dark">关于本站</div>
+      </div>
     </div>
 
     <!-- bottom -->
