--- a/index.html
+++ b/index.html
@@ -77,6 +77,19 @@
       </div>
     </div>
 
+    <div
+      style="
+        width: 100%;
+        text-align: center;
+        background-color: rgba(238, 238, 238, 0.671);
+        color: #32adff;
+        height: auto;
+        line-height: 50px;
+        font-size: 14px;
+      "
+    >
+      专业技能、项目经历、关于本站等页面还在制作中。
+    </div>
     <!-- home-ins -->
     <div class="home-ins">
       <div class="ins-content">
