--- a/skills.html
+++ b/skills.html
@@ -15,7 +15,7 @@
   </div>
 
   <!-- navigation -->
-  <div class="navigation">
+  <div class="navigation navigation-grey">
     <!-- 横版 -->
     <div class="navigation-content">
       
@@ -34,7 +34,9 @@
           <div class="choice choice-home">项目经历</div>
         </a>
         <a href="about.html">
-          <div class="choice choice-home">关于本站</div>
+          <div class="choice choice-home">
+            关于本站
+          </div>
         </a>
         <a href="https://github.com/zanlaihu" target="_blank">
           <div class="github github-white"></div>
@@ -46,8 +48,9 @@
       </div>
     </div>
     <!-- 下拉 -->
-    <div class="dropdown">
+    <div class="dropdown dropdown-dark">
       <div class="dropdown-line dropdown-line-white"></div>
+      <div class="dropdown-line-show dropdown-line-white-show"></div>
       <div class="dropdown-menu dropdown-menu-white">
         <a href="index.html">
           <p>主页</p>
@@ -78,11 +81,18 @@
   </div>
 
   <!-- home-ins -->
-  <div class="home-ins home-ins-other">
-    <div class="ins-content">
-      <div style="width: 100%;font-size: 50px;text-align: center;margin-top: 150px;">敬请期待</div>
+  <div class="home-ins home-ins-other" style="height: 390px;">
+    <div class="ins-content" style="text-align: center;">
+      <div style="font-size: 38px; margin-bottom: 20px; line-height: 42px">
+        得益于GitHub Pages
+      </div>
+      <div style="padding-bottom: 100px">以免费的形式就让网页上线了。</div>
     </div>
-    <div style="height: 400px;"></div>
+  </div>
+
+  <div class="about-content" style="height: 500px;">
+  </div>
+
   </div>
 
   <!-- bottom -->
