--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
     <div class="bar">
       <div class="first-single-bar single-bar">
-        <div class="single-bar-back">学习笔记</div>
+        <div class="single-bar-back single-bar-dark">学习笔记</div>
       </div>
       <div class="second-single-bar single-bar">
         <div class="single-bar-back">专业技能</div>
