--- a/skills.html
+++ b/skills.html
@@ -83,10 +83,10 @@
   <!-- home-ins -->
   <div class="home-ins home-ins-other" style="height: 390px;">
     <div class="ins-content" style="text-align: center;">
-      <div style="font-size: 38px; margin-bottom: 20px; line-height: 42px">
-        得益于GitHub Pages
+      <div style="font-size: 45px; margin-bottom: 20px; line-height: 42px">
+        敬请期待
       </div>
-      <div style="padding-bottom: 100px">以免费的形式就让网页上线了。</div>
+      <!-- <div style="padding-bottom: 100px">以免费的形式就让网页上线了。</div> -->
     </div>
   </div>
 
