--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         width: 100%;
         text-align: center;
         background-color: rgba(238, 238, 238, 0.671);
-        color: #32adff;
+        color: #0098fd;
         height: auto;
         line-height: 50px;
         font-size: 14px;
