--- a/study-notes.html
+++ b/study-notes.html
@@ -222,6 +222,9 @@
           <a href="https://juejin.cn/post/6978073442587246600" target="_blank">
             <div>3 生命周期&state</div>
           </a>
+          <a href="https://juejin.cn/post/6978359617017348127/" target="_blank">
+            <div>4 事件处理</div>
+          </a>
         </div>
       </div>
       <div class="full-index-content">
