--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
       style="
         width: 100%;
         text-align: center;
-        background-color: rgba(238, 238, 238, 0.671);
-        color: #0098fd;
+        background-color: rgb(156, 156, 156);
+        color: #ffffff;
         height: auto;
-        line-height: 50px;
-        font-size: 14px;
+        /* line-height: 40px; */
+        font-size: 11px;
       "
     >
       专业技能、项目经历、关于本站等页面还在制作中。
