--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
       style="
         width: 100%;
         text-align: center;
-        background-color: rgb(156, 156, 156);
+        background-color: rgb(40, 140, 255);
         color: #ffffff;
         height: auto;
         /* line-height: 40px; */
-        font-size: 11px;
+        font-size: 10px;
       "
     >
-      专业技能、项目经历、关于本站等页面还在制作中。
+      添加学习笔记中。专业技能、项目经历、关于本站等页面还在排队制作中。
     </div>
     <!-- home-ins -->
     <div class="home-ins">
