--- a/study-notes.html
+++ b/study-notes.html
@@ -160,8 +160,11 @@
         <a href="https://juejin.cn/post/6949853697857814542/" target="_blank">
           <div>2 CSS基础</div>
         </a>
-        <a>
+        <!-- <a>
           <div>3 添加样式</div>
+        </a> -->
+        <a href="https://github.com/zanlaihu/study-notes/blob/main/CSS属性/display.md" target="_blank">
+          <div>linear-gradient</div>
         </a>
         <a>
           <div>布局</div>
