--- a/index.html
+++ b/index.html
@@ -79,16 +79,21 @@
 
     <div
       style="
-        width: 100%;
+        margin: auto;
+        padding-left: 10px;
+        padding-right: 10px;
         text-align: center;
-        background-color: rgb(40, 140, 255);
+        background-image: linear-gradient(
+          to right,
+          rgb(120, 221, 252),
+          rgb(69, 171, 255),
+          rgb(69, 143, 255)
+        );
         color: #ffffff;
-        height: auto;
-        /* line-height: 40px; */
-        font-size: 10px;
+        font-size: 12px;
       "
     >
-      添加学习笔记中。专业技能、项目经历、关于本站等页面还在排队制作中。
+      正在添加学习笔记。专业技能、项目经历、关于本站等页面还在排队等待制作中。。。
     </div>
     <!-- home-ins -->
     <div class="home-ins">
