--- a/study-notes.html
+++ b/study-notes.html
@@ -201,17 +201,17 @@
       </div>
       <div class="full-index-content">
         <div class="single-content-title">前端框架</div>
-        <!-- <div class="single-content">
+        <div class="single-content">
           <a target="">
             <div>Angular</div>
           </a>
-          <a target="">
+          <a href="https://github.com/zanlaihu/study-notes/blob/main/Angular/1%20什么是Angular.md" target="_blank">
             <div>1 什么是Angular</div>
           </a>
-          <a target="">
-            <div>1 组件</div>
+          <a href="https://github.com/zanlaihu/study-notes/blob/main/Angular/2%20组件.md" target="_blank">
+            <div>2 组件</div>
           </a>
-        </div> -->
+        </div>
         <div class="single-content">
           <a>
             <div>React</div>
