--- a/study-notes.html
+++ b/study-notes.html
@@ -163,18 +163,16 @@
         <!-- <a>
           <div>3 添加样式</div>
         </a> -->
-        <a href="https://github.com/zanlaihu/study-notes/blob/main/CSS属性/display.md" target="_blank">
-          <div>linear-gradient</div>
-        </a>
         <a>
           <div>布局</div>
         </a>
         <a>
           <div>盒子模型</div>
         </a>
-        <a>
-          <div>linear-gradient</div>
+        <a href="https://github.com/zanlaihu/study-notes/blob/main/CSS属性/display.md" target="_blank">
+          <div>display</div>
         </a>
+        <a><div>linear-gradient</div></a>
       </div>
       <div class="single-content">
         <a>
