--- a/index.html
+++ b/index.html
@@ -83,17 +83,12 @@
         padding-left: 10px;
         padding-right: 10px;
         text-align: center;
-        background-image: linear-gradient(
-          to right,
-          rgb(120, 221, 252),
-          rgb(69, 171, 255),
-          rgb(69, 143, 255)
-        );
+        background-color: rgb(40, 140, 255);
         color: #ffffff;
-        font-size: 12px;
+        font-size: 14px;
       "
     >
-      正在添加学习笔记。专业技能、项目经历、关于本站等页面还在排队等待制作中。。。
+      专业技能、项目经历、关于本站等页面还在制作中。
     </div>
     <!-- home-ins -->
     <div class="home-ins">
