--- a/index.html
+++ b/index.html
@@ -1,118 +1,119 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Hu Zanlai Website</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1,
+			user-scalable=no"
+    />
+    <link rel="stylesheet" href="assets/css/main.css" />
+  </head>
 
-<head>
-  <title>Hu Zanlai Website</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1,
-			user-scalable=no" />
-  <link rel="stylesheet" href="assets/css/main.css" />
-</head>
+  <body class="body-style">
+    <div class="news news-purple">
+      <div class="news-text">更新时间：</div>
+    </div>
 
-<body class="body-style">
-  <div class="news news-purple">
-    <div class="news-text">更新时间：</div>
-  </div>
+    <!-- navigation -->
+    <div class="navigation">
+      <!-- 横版 -->
+      <div class="navigation-content">
+        <div class="navigation-choice">
+          <a href="index.html" class="logo logo-white choice-focused-white">
+            <div>Hu</div>
+          </a>
 
-  <!-- navigation -->
-  <div class="navigation">
-    <!-- 横版 -->
-    <div class="navigation-content">
-      <div class="navigation-choice">
-        <a href="index.html" class="logo logo-white choice-focused-white">
-          <div >Hu</div>
-        </a>
-        
-        <!-- <a href="index.html">
+          <!-- <a href="index.html">
           <div class="choice choice-home choice-focused choice-focused-white">
             主页
           </div>
         </a> -->
-        <a href="study-notes.html">
-          <div class="choice choice-home">学习笔记</div>
-        </a>
-        <a href="skills.html">
-          <div class="choice choice-home">专业技能</div>
-        </a>
-        <a href="projects.html">
-          <div class="choice choice-home">项目经历</div>
-        </a>
-        <a href="about.html">
-          <div class="choice choice-home">关于本站</div>
-        </a>
-        <a href="https://github.com/zanlaihu">
-          <div class="github github-white"></div>
-        </a>
-      </div>
-      <div class="inner-header-icon">
-        <span> </span>
-        <span> </span>
-      </div>
-    </div>
-    <!-- 下拉 -->
-    <div class="dropdown">
-      <div class="dropdown-line dropdown-line-white"></div>
-      <div class="dropdown-menu dropdown-menu-white">
-        <a href="index.html">
-          <p>主页</p>
-        </a>
-        <hr />
-        <a href="study-notes.html">
-          <p>学习笔记</p>
-        </a>
-        <hr />
-        <a href="skills.html">
-          <p>专业技能</p>
-        </a>
-        <hr />
-        <a href="projects.html">
-          <p>项目经历</p>
-        </a>
-        <hr />
-        <a href="about.html">
-          <p>关于本站</p>
-        </a>
-        <hr />
-        <a href="https://github.com/zanlaihu">
-          <p>GitHub</p>
-        </a>
-        <hr />
-      </div>
-    </div>
-  </div>
-
-  <!-- home-ins -->
-  <div class="home-ins home-ins-home">
-    <div class="ins-content">
-      <div class="ins-left">
-        <div class="ins-news">
-          <div class="ins-news-logo">New</div>
-          <div class="ins-news-title">小破站的艰辛建站史</div>
-          <div class="ins-arrow"></div>
+          <a href="study-notes.html">
+            <div class="choice choice-home">学习笔记</div>
+          </a>
+          <a href="skills.html">
+            <div class="choice choice-home">专业技能</div>
+          </a>
+          <a href="projects.html">
+            <div class="choice choice-home">项目经历</div>
+          </a>
+          <a href="about.html">
+            <div class="choice choice-home">关于本站</div>
+          </a>
+          <a href="https://github.com/zanlaihu" target="_blank">
+            <div class="github github-white"></div>
+          </a>
         </div>
-
-        <div class="ins-title">因为兴趣使然而建立的小站</div>
-        <div class="ins-ins">
-          用于放置学习笔记、项目经验总结、技能清单、以及最右边小小的GitHub链接。快点击顶部的导航来选择感兴趣的内容吧！
+        <div class="inner-header-icon">
+          <span> </span>
+          <span> </span>
         </div>
-        <div style="height: 400px;"></div>
+      </div>
+      <!-- 下拉 -->
+      <div class="dropdown">
+        <div class="dropdown-line dropdown-line-white"></div>
+        <div class="dropdown-menu dropdown-menu-white">
+          <a href="index.html">
+            <p>主页</p>
+          </a>
+          <hr />
+          <a href="study-notes.html">
+            <p>学习笔记</p>
+          </a>
+          <hr />
+          <a href="skills.html">
+            <p>专业技能</p>
+          </a>
+          <hr />
+          <a href="projects.html">
+            <p>项目经历</p>
+          </a>
+          <hr />
+          <a href="about.html">
+            <p>关于本站</p>
+          </a>
+          <hr />
+          <a href="https://github.com/zanlaihu">
+            <p>GitHub</p>
+          </a>
+          <hr />
+        </div>
       </div>
     </div>
-  </div>
 
-  <!-- bottom -->
-  <div class="bottom">
-    <div class="bottom-contact">
-      <div class="contact-title">联系方式</div>
-      <div class="contact-message">邮箱：klaushu@outlook.com</div>
+    <!-- home-ins -->
+    <div class="home-ins home-ins-home">
+      <div class="ins-content">
+        <div class="ins-left">
+          <div class="ins-news">
+            <div class="ins-news-logo">New</div>
+            <div class="ins-news-title">小破站的艰辛建站史</div>
+            <div class="ins-arrow"></div>
+          </div>
+
+          <div class="ins-title">因为兴趣使然而建立的小站</div>
+          <div class="ins-ins">
+            用于放置学习笔记、项目经验总结、技能清单、以及最右边小小的GitHub链接。快点击顶部的导航来选择感兴趣的内容吧！
+          </div>
+          <div style="height: 400px"></div>
+        </div>
+      </div>
     </div>
-    <div class="bottom-line"></div>
-    <div class="bottom-label">Made with ❤️ by Zanlai.</div>
-  </div>
 
-  <!-- JavaScript -->
-  <script src="assets/js/jquery-3.6.0.min.js"></script>
-  <script src="assets/js/main.js"></script>
-</body>
+    <!-- bottom -->
+    <div class="bottom">
+      <div class="bottom-contact">
+        <div class="contact-title">联系方式</div>
+        <div class="contact-message">邮箱：klaushu@outlook.com</div>
+      </div>
+      <div class="bottom-line"></div>
+      <div class="bottom-label">Made with ❤️ by Zanlai.</div>
+    </div>
 
+    <!-- JavaScript -->
+    <script src="assets/js/jquery-3.6.0.min.js"></script>
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
