--- a/study-notes.html
+++ b/study-notes.html
@@ -72,7 +72,7 @@
           <p>关于本站</p>
         </a>
         <hr />
-        <a href="https://github.com/zanlaihu">
+        <a href="https://github.com/zanlaihu" target="_blank">
           <p>GitHub</p>
         </a>
         <hr />
