--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <p>关于本站</p>
           </a>
           <hr />
-          <a href="https://github.com/zanlaihu">
+          <a href="https://github.com/zanlaihu" target="_blank">
             <p>GitHub</p>
           </a>
           <hr />
