--- a/index.html
+++ b/index.html
@@ -77,21 +77,8 @@
       </div>
     </div>
 
-    <div
-      style="
-        margin: auto;
-        padding-left: 10px;
-        padding-right: 10px;
-        text-align: center;
-        background-color: rgb(40, 140, 255);
-        color: #ffffff;
-        font-size: 14px;
-      "
-    >
-      专业技能、项目经历、关于本站等页面还在制作中。
-    </div>
     <!-- home-ins -->
-    <div class="home-ins">
+    <div class="home-ins home-ins-blue">
       <div class="ins-content">
         <div class="ins-title">因为兴趣使然而建立的小站</div>
         <div class="ins-ins">
@@ -105,13 +92,13 @@
 
     <div class="bar">
       <div class="first-single-bar single-bar">
-        <div class="single-bar-back single-bar-dark">学习笔记</div>
+        <div class="single-bar-back">学习笔记</div>
       </div>
       <div class="second-single-bar single-bar">
         <div class="single-bar-back">专业技能</div>
       </div>
       <div class="third-single-bar single-bar">
-        <div class="single-bar-back">项目经历</div>
+        <div class="single-bar-back single-bar-dark">项目经历</div>
       </div>
       <div class="fourth-single-bar single-bar">
         <div class="single-bar-back single-bar-dark">关于本站</div>
