--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
         <a href="./study-notes.html" target=""
           ><div class="ins-link">正在添加学习笔记中 ></div></a
         >
+        <div style="width:100%;height:90px"></div>
       </div>
     </div>
 
