--- a/index.html
+++ b/index.html
@@ -84,9 +84,11 @@
         <div class="ins-ins">
           用于放置学习笔记、专业技能、项目经历、及GitHub。快点击顶部的导航来选择感兴趣的内容吧！
         </div>
-        <a href="./study-notes.html" target=""
-          ><div class="ins-link">正在添加学习笔记中 ></div></a
-        >
+        <div class="ins-link">
+          <a href="./study-notes.html" style="width: 190px"
+            >正在添加学习笔记中 ></a
+          >
+        </div>
         <div style="width: 100%; height: 100px"></div>
       </div>
     </div>
