--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
         </div>
         <div class="ins-link">
           <a href="./study-notes.html" style="width: 190px"
-            >正在添加学习笔记中 ></a
+            >正在添加学习笔记中<br />
+            ></a
           >
         </div>
         <div style="width: 100%; height: 100px"></div>
