--- a/index.html
+++ b/index.html
@@ -102,12 +102,7 @@
             看了各方面资料后自己总结的一点知识。来自各类教科书、菜鸟教程、MDN等资源。
           </p>
           <p>
-            <a
-              href="./study-notes.html"
-              target="_blank"
-              style="color: #0078e9"
-              >查看笔记 ></a
-            >
+            <a href="./study-notes.html" style="color: #0078e9">查看笔记 ></a>
           </p>
           <p>
             <a
@@ -123,16 +118,9 @@
         <div class="single-bar-back">专业技能</div>
         <div class="single-bar-content single-bar-content-dark">
           <p>专业技能</p>
+          <p>全面地罗列一次自己的全部技能。</p>
           <p>
-            全面地罗列一次自己的全部技能。
-          </p>
-          <p>
-            <a
-              href="./skills.html"
-              target="_blank"
-              style="color: #0078e9"
-              >查看技能 ></a
-            >
+            <a href="./skills.html" style="color: #0078e9">查看技能 ></a>
           </p>
         </div>
       </div>
@@ -144,12 +132,7 @@
             包含企业项目和个人项目。企业项目只涉及技术栈，不包含业务类内容。
           </p>
           <p>
-            <a
-              href="./projects.html"
-              target="_blank"
-              style="color: #0078e9"
-              >想看项目经历 ></a
-            >
+            <a href="./projects.html" style="color: #0078e9">想看项目经历 ></a>
           </p>
         </div>
       </div>
@@ -161,10 +144,7 @@
             关于本站是如何炼成的，使用了哪些样式和JavaScript方法。虽然作为静态页面技术性并不强，但也是我用心做并且花进去不少时间的。感兴趣就看看吧！
           </p>
           <p>
-            <a
-              href="./about.html"
-              target="_blank"
-              style="color: #0078e9"
+            <a href="./about.html" style="color: #0078e9"
               >了解小破站是如何建成的 ></a
             >
           </p>
