--- a/index.html
+++ b/index.html
@@ -102,14 +102,13 @@
             看了各方面资料后自己总结的一点知识。来自各类教科书、菜鸟教程、MDN等资源。
           </p>
           <p>
-            <a href="./study-notes.html" style="color: #0078e9">查看笔记 ></a>
-          </p>
-          <p>
+            <a href="./study-notes.html" style="color: #0078e9">查看笔记 ></a
+            ><br />
             <a
               href="https://github.com/zanlaihu/study-notes"
               target="_blank"
               style="color: #0078e9"
-              >更多原始笔记草稿可访问GitHub项目 ></a
+              >想要查看更多未刊登在本站的原始笔记草稿可访问这里 ></a
             >
           </p>
         </div>
@@ -132,7 +131,7 @@
             包含企业项目和个人项目。企业项目只涉及技术栈，不包含业务类内容。
           </p>
           <p>
-            <a href="./projects.html" style="color: #0078e9">想看项目经历 ></a>
+            <a href="./projects.html" style="color: #0078e9">查看项目经历 ></a>
           </p>
         </div>
       </div>
@@ -141,7 +140,7 @@
         <div class="single-bar-content single-bar-content-light">
           <p>关于本站</p>
           <p>
-            关于本站是如何炼成的，使用了哪些样式和JavaScript方法。虽然作为静态页面技术性并不强，但也是我用心做并且花进去不少时间的。感兴趣就看看吧！
+            关于本站是如何炼成的，怎么从一张白纸构思出了现在这样，使用了哪些基础样式和JavaScript方法等等。虽然作为静态页面技术性并不强，但也是我用心做并且花进去不少时间的。感兴趣就看看吧！
           </p>
           <p>
             <a href="./about.html" style="color: #0078e9"
