--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <div class="single-bar-back single-bar-dark">关于本站</div>
         <div class="single-bar-content single-bar-content-light">
           <p>关于本站</p>
-          <p>
+          <p style="font-size: 15px;">
             关于本站是如何炼成的，怎么从一张白纸构思出了现在这样，使用了哪些基础样式和JavaScript方法等等。虽然作为静态页面技术性并不强，但也是我用心做并且花进去不少时间的。感兴趣就看看吧！
           </p>
           <p>
