--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1,
-			user-scalable=no"
+      user-scalable=no"
     />
     <link rel="stylesheet" href="assets/css/main.css" />
   </head>
@@ -85,27 +85,69 @@
           用于放置学习笔记、专业技能、项目经历、及GitHub。快点击顶部的导航来选择感兴趣的内容吧！
         </div>
         <div class="ins-link">
-          <a href="./study-notes.html" style="width: 190px"
-            >正在添加学习笔记中<br />
-            ></a
+          <a href="./study-notes.html" style="width: 200px"
+            >正在添加学习笔记中 ></a
           >
         </div>
-        <div style="width: 100%; height: 100px"></div>
+        <div style="width: 100%; height: 90px"></div>
       </div>
     </div>
 
     <div class="bar">
       <div class="first-single-bar single-bar">
         <div class="single-bar-back">学习笔记</div>
+        <div class="single-bar-content single-bar-content-dark">
+          <p>学习笔记</p>
+          <p>
+            看了各方面资料后自己总结的一点知识。来自各类教科书、菜鸟教程、MDN等资源。
+          </p>
+          <p>
+            <a href="./study-notes.html" style="color: #0078e9">查看笔记 ></a
+            ><br />
+            <a
+              href="https://github.com/zanlaihu/study-notes"
+              target="_blank"
+              style="color: #0078e9"
+              >想要查看更多未刊登在本站的原始笔记草稿可访问这里 ></a
+            >
+          </p>
+        </div>
       </div>
       <div class="second-single-bar single-bar">
         <div class="single-bar-back">专业技能</div>
+        <div class="single-bar-content single-bar-content-dark">
+          <p>专业技能</p>
+          <p>全面地罗列一次自己的全部技能。</p>
+          <p>
+            <a href="./skills.html" style="color: #0078e9">查看技能 ></a>
+          </p>
+        </div>
       </div>
       <div class="third-single-bar single-bar">
         <div class="single-bar-back single-bar-dark">项目经历</div>
+        <div class="single-bar-content single-bar-content-light">
+          <p>项目经历</p>
+          <p>
+            包含企业项目和个人项目。企业项目只涉及技术栈，不包含业务类内容。
+          </p>
+          <p>
+            <a href="./projects.html" style="color: #0078e9">查看项目经历 ></a>
+          </p>
+        </div>
       </div>
       <div class="fourth-single-bar single-bar">
         <div class="single-bar-back single-bar-dark">关于本站</div>
+        <div class="single-bar-content single-bar-content-light">
+          <p>关于本站</p>
+          <p style="font-size: 15px;">
+            关于本站是如何炼成的，怎么从一张白纸构思出了现在这样，使用了哪些基础样式和JavaScript方法等等。虽然作为静态页面技术性并不强，但也是我用心做并且花进去不少时间的。感兴趣就看看吧！
+          </p>
+          <p>
+            <a href="./about.html" style="color: #0078e9"
+              >了解小破站是如何建成的 ></a
+            >
+          </p>
+        </div>
       </div>
     </div>
 
