--- a/study-notes.html
+++ b/study-notes.html
@@ -216,6 +216,9 @@
           <a href="https://juejin.cn/post/6978359617017348127/" target="_blank">
             <div>4 事件处理</div>
           </a>
+                    <a href="https://juejin.cn/post/6979028111014756366/" target="_blank">
+            <div>5 条件渲染</div>
+          </a>
         </div>
         <div class="single-content">
           <a target="">
