--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               href="https://github.com/zanlaihu/study-notes"
               target="_blank"
               style="color: #0078e9"
-              >想要查看更多未刊登在本站的原始笔记草稿可访问这里 ></a
+              >未刊登在本站的原始草稿 ></a
             >
           </p>
         </div>
