--- a/study-notes.html
+++ b/study-notes.html
@@ -145,7 +145,7 @@
         <a>
           <div>JavaScript中级</div>
         </a>
-        <a href="https://github.com/zanlaihu/study-notes/blob/main/《JavaScript高级程序设计》和MDN/99.XX%20XMLHttpRequest对象.md"
+        <a href="https://github.com/zanlaihu/study-notes/blob/main/JavaScript/%E3%80%8AJavaScript%E9%AB%98%E7%BA%A7%E7%A8%8B%E5%BA%8F%E8%AE%BE%E8%AE%A1%E3%80%8B%E5%92%8CMDN/99.XX%20XMLHttpRequest%E5%AF%B9%E8%B1%A1.md"
           target="_blank">
           <div>XMLHttpRequest对象</div>
         </a>
@@ -169,7 +169,7 @@
         <a>
           <div>盒子模型</div>
         </a>
-        <a href="https://github.com/zanlaihu/study-notes/blob/main/CSS属性/display.md" target="_blank">
+        <a href="https://github.com/zanlaihu/study-notes/blob/main/CSS/display.md" target="_blank">
           <div>display</div>
         </a>
         <a><div>linear-gradient</div></a>
@@ -224,10 +224,10 @@
           <a target="">
             <div>Angular</div>
           </a>
-          <a href="https://github.com/zanlaihu/study-notes/blob/main/Angular/1%20什么是Angular.md" target="_blank">
+          <a href="https://github.com/zanlaihu/study-notes/blob/main/Angular/1%20%E4%BB%80%E4%B9%88%E6%98%AFAngular.md" target="_blank">
             <div>1 什么是Angular</div>
           </a>
-          <a href="https://github.com/zanlaihu/study-notes/blob/main/Angular/2%20组件.md" target="_blank">
+          <a href="https://github.com/zanlaihu/study-notes/blob/main/Angular/2%20%E7%BB%84%E4%BB%B6.md" target="_blank">
             <div>2 组件</div>
           </a>
         </div>
@@ -248,7 +248,7 @@
           <a>
             <div>AJAX</div>
           </a>
-          <a href="https://github.com/zanlaihu/study-notes/blob/main/AJAX/1%20什么是Ajax.md" target="_blank">
+          <a href="https://github.com/zanlaihu/study-notes/blob/main/AJAX/1%20%E4%BB%80%E4%B9%88%E6%98%AFAjax.md" target="_blank">
             <div>1 什么是AJAX</div>
           </a>
         </div>
@@ -261,28 +261,28 @@
           <a>
             <div>jQuery</div>
           </a>
-          <a href="https://github.com/zanlaihu/study-notes/blob/main/JQuery/1.2%20语法.md" target="_blank">
+          <a href="https://github.com/zanlaihu/study-notes/blob/main/JQuery/1.1%20jQuery.md" target="_blank">
             <div>1 什么是jQuery</div>
           </a>
-          <a href="https://github.com/zanlaihu/study-notes/blob/main/JQuery/1.2%20语法.md" target="_blank">
+          <a href="https://github.com/zanlaihu/study-notes/blob/main/JQuery/1.2%20%E8%AF%AD%E6%B3%95.md" target="_blank">
             <div>1.2 语法</div>
           </a>
-          <a href="https://github.com/zanlaihu/study-notes/blob/main/JQuery/1.3%20选择器.md" target="_blank">
+          <a href="https://github.com/zanlaihu/study-notes/blob/main/JQuery/1.3%20%E9%80%89%E6%8B%A9%E5%99%A8.md" target="_blank">
             <div>1.3 选择器</div>
           </a>
-          <a href="https://github.com/zanlaihu/study-notes/blob/main/JQuery/1.4%20事件.md" target="_blank">
+          <a href="https://github.com/zanlaihu/study-notes/blob/main/JQuery/1.4%20%E4%BA%8B%E4%BB%B6.md" target="_blank">
             <div>1.4 事件</div>
           </a>
-          <a href="https://github.com/zanlaihu/study-notes/blob/main/JQuery/2.1%20隐藏和显示.md" target="_blank">
+          <a href="https://github.com/zanlaihu/study-notes/blob/main/JQuery/2.1%20%E9%9A%90%E8%97%8F%E5%92%8C%E6%98%BE%E7%A4%BA.md" target="_blank">
             <div>2.1 隐藏和显示</div>
           </a>
-          <a href="https://github.com/zanlaihu/study-notes/blob/main/JQuery/2.2%20淡入淡出.md" target="_blank">
+          <a href="https://github.com/zanlaihu/study-notes/blob/main/JQuery/2.2%20%E6%B7%A1%E5%85%A5%E6%B7%A1%E5%87%BA.md" target="_blank">
             <div>2.2 淡入淡出</div>
           </a>
-          <a href="https://github.com/zanlaihu/study-notes/blob/main/JQuery/2.3%20滑动.md" target="_blank">
+          <a href="https://github.com/zanlaihu/study-notes/blob/main/JQuery/2.3%20%E6%BB%91%E5%8A%A8.md" target="_blank">
             <div>2.3 滑动</div>
           </a>
-          <a>
+          <a href="https://github.com/zanlaihu/study-notes/blob/main/JQuery/2.4%20%E5%8A%A8%E7%94%BB.md" target="_blank">
             <div>2.4 动画/停止动画</div>
           </a>
           <a>
@@ -315,7 +315,7 @@
           <a>
             <div>网络请求与远程资源</div>
           </a>
-          <a href="https://github.com/zanlaihu/study-notes/blob/main/计算机网络/跨域.md" target="_blank">
+          <a href="https://github.com/zanlaihu/study-notes/blob/main/%E8%AE%A1%E7%AE%97%E6%9C%BA%E7%BD%91%E7%BB%9C/%E8%B7%A8%E5%9F%9F.md" target="_blank">
             <div>跨域</div>
           </a>
           <!-- <a href="https://github.com/zanlaihu/study-notes/blob/main/计算机网络/跨域资源共享CORS.md" target="_blank">
@@ -341,7 +341,7 @@
           <a>
             <div>应用维护</div>
           </a>
-          <a href="https://github.com/zanlaihu/study-notes/blob/main/React/XX%20发布渠道.md" target="_blank">
+          <a href="https://github.com/zanlaihu/study-notes/blob/main/React/XX%20%E5%8F%91%E5%B8%83%E6%B8%A0%E9%81%93.md" target="_blank">
             <div>版本管理(React为例)</div>
           </a>
         </div>
