--- a/study-notes.html
+++ b/study-notes.html
@@ -123,7 +123,7 @@
           <div>11 对象：理解对象</div>
         </a>
         <a href="https://juejin.cn/post/6953505088673415176" target="_blank">
-          <div>12 操作符：一元、加性、乘性</div>
+          <div>12 操作符：一元、加性、乘性、指数</div>
         </a>
         <a href="https://juejin.cn/post/6976235815944880141" target="_blank">
           <div>13 操作符：布尔、相等、关系</div>
