--- a/study-notes.html
+++ b/study-notes.html
@@ -164,10 +164,10 @@
           <div>3 添加样式</div>
         </a> -->
         <a>
-          <div>布局</div>
+          <div>盒子模型</div>
         </a>
         <a>
-          <div>盒子模型</div>
+          <div>position</div>
         </a>
         <a href="https://github.com/zanlaihu/study-notes/blob/main/CSS/display.md" target="_blank">
           <div>display</div>
