--- a/study-notes.html
+++ b/study-notes.html
@@ -155,13 +155,25 @@
           <div>3 添加样式</div>
         </a> -->
         <a>
+          <div>选择器</div>
+        </a>
+        <a>
+          <div>伪类(Pseudo-classes)</div>
+        </a>
+        <a>
           <div>盒子模型</div>
+        </a>
+        <a>
+          <div>fonts</div>
         </a>
         <a>
           <div>position</div>
         </a>
         <a href="https://github.com/zanlaihu/study-notes/blob/main/CSS/display.md" target="_blank">
           <div>display</div>
+        </a>
+        <a>
+          <div>float</div>
         </a>
         <a>
           <div>linear-gradient</div>
