--- a/study-notes.html
+++ b/study-notes.html
@@ -155,7 +155,7 @@
           <div>3 添加样式</div>
         </a> -->
         <a>
-          <div>选择器</div>
+          <div>选择器(id & class)</div>
         </a>
         <a>
           <div>伪类(Pseudo-classes)</div>
