--- a/study-notes.html
+++ b/study-notes.html
@@ -80,6 +80,10 @@
     </div>
   </div>
 
+  <div class="notes-navigate">
+    
+  </div>
+
   <!-- full-index -->
   <div class="full-index">
     <div class="full-index-title"></div>
