--- a/study-notes.html
+++ b/study-notes.html
@@ -81,7 +81,24 @@
   </div>
 
   <div class="notes-navigate">
-    
+    <a href="./study-notes.html">
+      <div class="notes-choice">
+        <div class="concept"></div>
+        <div style="color: #a26aec;">概念</div>
+      </div>
+    </a>
+    <a href="./algorithm.html">
+      <div class="notes-choice">
+        <div class="algorithm"></div>
+        <div>算法</div>
+      </div>
+    </a>
+    <a href="./journal.html">
+      <div class="notes-choice">
+        <div class="journal"></div>
+        <div>日志</div>
+      </div>
+    </a>
   </div>
 
   <!-- full-index -->
