--- a/study-notes.html
+++ b/study-notes.html
@@ -120,7 +120,7 @@
           <div>3 语法</div>
         </a>
         <a href="https://juejin.cn/post/6941231089356800031" target="_blank">
-          <div>4 变量声明</div>
+          <div>4 变量声明：var、let、const</div>
         </a>
         <a href="https://juejin.cn/post/6943151642397114405" target="_blank">
           <div>5 数据类型：Undefined、Null、Boolean</div>
