--- a/algorithm.html
+++ b/algorithm.html
@@ -106,20 +106,28 @@
     <div class="full-index-title"></div>
     <div class="full-index-content">
       <div class="single-content-title">LeetCode</div>
-      <!-- <div class="single-content">
+      <div class="single-content">
         <a href="" target="_blank">
           <div>移动窗口法</div>
         </a>
-        <a href="https://juejin.cn/post/6934362238815830030" target="_blank">
-          <div>1 什么是JavaScript</div>
+        <a href="https://github.com/zanlaihu/study-notes/blob/main/算法/移动窗口/无重复字符的最长子串.js" target="_blank">
+          <div>无重复字符的最长子串</div>
         </a>
-      </div> -->
+      </div>
       <div class="single-content">
         <a>
           <div>中心扩散法</div>
         </a>
         <a href="https://github.com/zanlaihu/study-notes/blob/main/算法/中心扩散法/最长回文子串.js" target="_blank">
           <div>最长回文子串</div>
+        </a>
+      </div>
+      <div class="single-content">
+        <a>
+          <div>Middle</div>
+        </a>
+        <a href="https://github.com/zanlaihu/study-notes/blob/main/算法/LeetCode/Middle/Z字形变换.js" target="_blank">
+          <div>Z 字形变换</div>
         </a>
       </div>
     </div>
